--- a/index.Rmd
+++ b/index.Rmd
@@ -23,14 +23,14 @@ black_jail_pop_over_time_in_top_5
 This chart shows the trends of black jail population over years in top 5 counties have the highest total black jail population in the United States. Top 5 counties includes New York, Los Angeles, Cook, Philadelphia, and Harris County. This chart is included in this reported to indicate the overal trends of incarceration for black people. From the chart, New York had been the county with the most highest black jail population from around 1990s to 2015. The overall trend of black jail population in top 5 counties is decreasing, which is probably because the racism in the U.S are developing over time.
 
 ## Variable Comparison Chart
-```{r echo = F, , message = F, warning= F}
+```{r echo = F, message = F, warning= F}
 variable_comparison_chart 
 ```
 
 This chart shows the comparison between black jail population and white jail population to illustrate how disproportionate incarceration in various race. In this chart, the black jail population is much larger than white jail population. For example, the highest black jail population is over 10,000, while the maximum in white jail population is approximately 7,300.
 
 ## Map
-```{r echo = F}
+```{r echo = F, message = F, warning= F}
 black_jail_map
 ```
 
